--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/horizon": "^3.6",
         "laravel/telescope": "^2.1",
         "laravel/tinker": "^2.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "predis/predis": "^1.1",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^10.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
